--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Newsletter</a>
+        </li> 
+        <li class="nav-item">
+          <a class="nav-link" href="#">Test Github App</a>
         </li>
       </ul>
     </nav>
