Le journal description+website

--- a/index.html
+++ b/index.html
@@ -72,10 +72,13 @@
       <!-- Section Le journal -->
     <section class="Le Journal">
       <h2 class="text-center">Le Journal</h2>
-    </section>
+        <h5 class="text-center">This is the only Francophone Newspapper around campus. To read it or even get involved please visit their website.</h5>
+        <p class="text-center"><a href="https://lejournalucl.com/" title="Le Journal" target="_blank">Le Journal's Website</a></p>
+        </section>
       <!-- Section Newsletter -->
     <section class="Newsletter">
       <h2 class="text-center">Newsletter</h2>
+        <h5 class="text-center">Don't forget to sign up to our Newsletter</h5>
     </section>
     </main>
       
