--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" type="image/svg+xml" href="logo.svg"/>
+    <link rel="shortcut icon" type="image/svg+xml" href="logo.png"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -14,49 +14,56 @@
     <!-- Bootstrap CSS  -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 
-    <!-- Custom fonts for this template -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet"> -->
-
     <!-- Custom styles for this template -->
-    <!-- <link href="css/one-page-wonder.min.css" rel="stylesheet"> -->
+    <link href="css/stylesheet.css" rel="stylesheet">
   </head>
   <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand navbar-light bg-light justify-content-between">
-      <!-- Titre -->
-      <a class="navbar-brand" href="#">
-      <img src="logo.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-      UCL Francophone Society
-      </a>
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">About us</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Events</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Committee</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Classes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Newsletter</a>
-        </li>
-      </ul>
-    </nav>
-
-
-    <!-- Footer -->
-    <footer class="py-5 bg-black">
-      <div class="container">
-        <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2018</p>
+    <nav class="navbar navbar-light sticky-top navbar-expand-md bg-light">
+      <div class="container-fluid">
+        <!-- Titre -->
+        <a class="navbar-brand" href="#">UCL Francophone Society</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarFrancosoc">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarFrancosoc">
+          <ul class="nav navbar-nav">
+              <a class="nav-link" href="#about">About us</a>
+              <a class="nav-link" href="#events">Events</a>
+              <a class="nav-link" href="#committee">Committee</a>
+              <a class="nav-link" href="#classes">Classes</a>
+              <a class="nav-link" href="#newsletter">Newsletter</a>
+          </ul>
+        </div>
       </div>
-      <!-- /.container -->
-    </footer>
+    </nav>
+    <div>
+      <!--Intro Section-->
+      <section id="bg_1" class="full_bg">
+        <div class="container flex-center white_txt">
+          <h1 id="about">About us</h1>
+          <p>Caca</p>
+        </div>
+      </section>
 
+      <section id="bg_2" class="full_bg">
+        <div class="container flex-center white_txt">
+          <h1 id="events">Events</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dictum ornare magna sit amet fringilla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget dolor aliquam dui suscipit accumsan quis eget metus. Pellentesque mollis augue eu felis tempor, eget pulvinar ante maximus. Praesent tempus, dolor nec sagittis facilisis, mi sapien sodales velit, quis porttitor mi sem at turpis. Morbi et dolor diam. Phasellus dictum, velit sed laoreet vestibulum, sem metus fermentum nisl, quis commodo lectus dolor id nunc. Donec pharetra tempor enim, id fermentum dui condimentum vitae. Duis tincidunt arcu eu lorem rhoncus, ac sodales dui scelerisque. Ut cursus orci est, quis tincidunt erat vehicula venenatis. Proin gravida turpis non ipsum auctor imperdiet. Nulla at ante ac nibh varius cursus sit amet vel lacus. Proin posuere auctor fermentum. Aliquam sit amet porttitor arcu.</p>
+        </div>
+      </section>
+
+      <section>
+        <p> Du texte </p>
+      </section>
+      <!-- Footer -->
+      <footer class="py-5 bg-black">
+        <div class="container">
+          <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2018</p>
+        </div>
+        <!-- /.container -->
+      </footer>
+    </div>
     <!-- JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
