--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarFrancosoc">
           <ul class="nav navbar-nav">
-              <a class="nav-link" href="#about">About us</a>
-              <a class="nav-link" href="#events">Events</a>
+              <a class="nav-link" href="#bg_1">About us</a>
+              <a class="nav-link" href="#bg_2">Events</a>
               <a class="nav-link" href="#committee">Committee</a>
               <a class="nav-link" href="#classes">Classes</a>
               <a class="nav-link" href="#newsletter">Newsletter</a>
@@ -39,23 +39,20 @@
     </nav>
     <div>
       <!--Intro Section-->
-      <section id="bg_1" class="full_bg">
-        <div class="container flex-center white_txt">
-          <h1 id="about">About us</h1>
-          <p>Caca</p>
+      <div id="bg_1" class="row align-items-center full_bg">
+        <div class="text-center white_txt">
+          <h1>About us</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dictum ornare magna sit amet fringilla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget dolor aliquam dui suscipit accumsan quis eget metus. Pellentesque mollis augue eu felis tempor, eget pulvinar ante maximus.</p>
         </div>
-      </section>
+      </div>
 
-      <section id="bg_2" class="full_bg">
-        <div class="container flex-center white_txt">
-          <h1 id="events">Events</h1>
+      <div id="bg_2" class="row align-items-center full_bg">
+        <div class="text-center white_txt">
+          <h1>Events</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dictum ornare magna sit amet fringilla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget dolor aliquam dui suscipit accumsan quis eget metus. Pellentesque mollis augue eu felis tempor, eget pulvinar ante maximus. Praesent tempus, dolor nec sagittis facilisis, mi sapien sodales velit, quis porttitor mi sem at turpis. Morbi et dolor diam. Phasellus dictum, velit sed laoreet vestibulum, sem metus fermentum nisl, quis commodo lectus dolor id nunc. Donec pharetra tempor enim, id fermentum dui condimentum vitae. Duis tincidunt arcu eu lorem rhoncus, ac sodales dui scelerisque. Ut cursus orci est, quis tincidunt erat vehicula venenatis. Proin gravida turpis non ipsum auctor imperdiet. Nulla at ante ac nibh varius cursus sit amet vel lacus. Proin posuere auctor fermentum. Aliquam sit amet porttitor arcu.</p>
         </div>
-      </section>
+      </div>
 
-      <section>
-        <p> Du texte </p>
-      </section>
       <!-- Footer -->
       <footer class="py-5 bg-black">
         <div class="container">
