saturday (Classes done)

--- a/committee.html
+++ b/committee.html
@@ -1,4 +1,21 @@
 <!doctype html>
 <html lang="en">
-<p>This works toooooooo</p>
+    <head>
+        <meta charset="utf-8">
+        <link rel="shortcut icon" type="image/svg+xml" href="logo_Franco.jpg"/>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="">
+        <meta name="author" content="">
+
+        <!-- Bootstrap CSS  -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+
+        <!-- Custom styles for this template -->
+        <link href="css/stylesheet.css" rel="stylesheet">
+    </head>
+    <body>
+        <title>The Committee</title>
+        <p>This works toooooooo</p>
+    </body>
 </html>
