--- a/index_us.html
+++ b/index_us.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" type="image/svg+xml" href="logo.png"/>
+    <link rel="shortcut icon" type="image/svg+xml" href="logo_Franco.jpg"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
 
     <title>UCL Francophone Society</title>
 
@@ -34,6 +33,7 @@
               <a class="nav-link" href="#Classes">Classes</a>
               <li><a class="nav-link" href="committee.html">Committee</a></li>
               <a class="nav-link" href="#Le_Journal">Le Journal</a>
+              <a class="nav-link" href="#Sponsors">Sponsors</a>
               <a class="nav-link" href="#Newsletter">Newsletter</a>
           </ul>
         </div>
