--- a/classes.html
+++ b/classes.html
@@ -29,7 +29,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarFrancosoc">
               <ul class="nav navbar-nav">
-                  <a class="nav-link" href=index_me.html>About us</a>
+                  <a class="nav-link" href="window.location.href='index_us.html/#About'">About us</a>
                   <a class="nav-link" href="#Events">Events</a>
                   <a class="nav-link" href="#Classes">Classes</a>
                   <li><a class="nav-link" href="committee.html">Committee</a></li>
