Navbars linked entre pages + fb/insta icones

--- a/classes.html
+++ b/classes.html
@@ -23,19 +23,19 @@
         <nav class="navbar navbar-light sticky-top navbar-expand-md bg-light">
           <div class="container-fluid">
             <!-- Titre -->
-            <a class="navbar-brand" href="#">UCL Francophone Society</a>
+            <a class="navbar-brand" href="#"><img src="../media/logo_Franco.jpg" width="50px" height="50px" class="d-inline-block align-center">UCL Francophone Society</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarFrancosoc">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarFrancosoc">
-              <ul class="nav navbar-nav">
-                  <a class="nav-link" href="window.location.href='index_us.html/#About'">About us</a>
-                  <a class="nav-link" href="#Events">Events</a>
-                  <a class="nav-link" href="#Classes">Classes</a>
+              <ul class="nav navbar-nav ml-auto">
+                  <a class="nav-link" href='/index_us.html#About'>About us</a>
+                  <a class="nav-link" href="/index_us.html#Events">Events</a>
+                  <a class="nav-link" href="/index_us.html#Classes">Classes</a>
                   <li><a class="nav-link" href="committee.html">Committee</a></li>
-                  <a class="nav-link" href="#Le_Journal">Le Journal</a>
-                  <a class="nav-link" href="#Sponsors">Sponsors</a>
-                  <a class="nav-link" href="#Newsletter">Newsletter</a>
+                  <a class="nav-link" href="/index_us.html#Le_Journal">Le Journal</a>
+                  <a class="nav-link" href="/index_us.html#Sponsors">Sponsors</a>
+                  <a class="nav-link" href="/index_us.html#Newsletter">Newsletter</a>
               </ul>
             </div>
           </div>
