--- a/committee.html
+++ b/committee.html
@@ -16,6 +16,27 @@
     </head>
     <body>
         <title>The Committee</title>
-        <p>This works toooooooo</p>
+        <!-- Navigation -->
+        <!-- Navbar to the right -->
+        <nav class="navbar navbar-light sticky-top navbar-expand-md bg-light">
+          <div class="container-fluid">
+            <!-- Titre -->
+            <a class="navbar-brand" href="#"><img src="../media/logo_Franco.jpg" width="50px" height="50px" class="d-inline-block align-center">UCL Francophone Society</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarFrancosoc">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarFrancosoc">
+              <ul class="nav navbar-nav ml-auto">
+                  <a class="nav-link" href='/index_us.html#About'>About us</a>
+                  <a class="nav-link" href="/index_us.html#Events">Events</a>
+                  <a class="nav-link" href="/index_us.html#Classes">Classes</a>
+                  <li><a class="nav-link" href="committee.html">Committee</a></li>
+                  <a class="nav-link" href="/index_us.html#Le_Journal">Le Journal</a>
+                  <a class="nav-link" href="/index_us.html#Sponsors">Sponsors</a>
+                  <a class="nav-link" href="/index_us.html#Newsletter">Newsletter</a>
+              </ul>
+            </div>
+          </div>
+        </nav>
     </body>
 </html>
