Classes page done!

--- a/committee.html
+++ b/committee.html
@@ -13,6 +13,8 @@
 
         <!-- Custom styles for this template -->
         <link href="css/stylesheet.css" rel="stylesheet">
+		
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <title>The Committee</title>
@@ -34,6 +36,8 @@
                   <a class="nav-link" href="/index_us.html#Le_Journal">Le Journal</a>
                   <a class="nav-link" href="/index_us.html#Sponsors">Sponsors</a>
                   <a class="nav-link" href="/index_us.html#Newsletter">Newsletter</a>
+				  <a class="fa fa-facebook" href="http://www.facebook.com/uclfrancophonesociety" target="_blank" ></a>
+			      <a class="fa fa-instagram" href="https://www.instagram.com/uclufrancosoc/" target="_blank"></a>
               </ul>
             </div>
           </div>
