First try Committee

--- a/classes.html
+++ b/classes.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="shortcut icon" type="image/svg+xml" href="logo_Franco.jpg"/>
+        <link rel="shortcut icon" type="image/svg+xml" href="/media/logo_Franco.jpg"/>
 
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
