--- a/committee.html
+++ b/committee.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="shortcut icon" type="image/svg+xml" href="logo_Franco.jpg"/>
+        <link rel="shortcut icon" type="image/svg+xml" href="/media/logo_Franco.jpg"/>
 
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
@@ -42,5 +42,27 @@
             </div>
           </div>
         </nav>
+
+
+<!--
+		<div class="container1">
+    		<div class="card1">
+			<h4 class="card-title">President</h4>
+			<p class="card-text-left">Cras convallis ut turpis vitae facilisis. Morbi eu augue vel quam efficitur rhoncus vitae eget lectus. Cras augue ligula, aliquam ut enim ut, feugiat imperdiet sem. Integer sed mi quis nisl eleifend interdum.<img src="/media/napoleon.jpg" alt="President" style="float: right" padding=15px></p>	
+			</div>
+-->
+		
+		<div class="row align-items-right">
+			<div class="column-md-6">
+				<div class="card">
+					<div class="card-title">President</div>
+					<p class="card-text">box-shadow: 20px 20px 20px grey;</p>
+				</div>
+			</div>
+			<div class="column-md-6">
+				<img src="/media/napoleon.jpg" style="float: right">
+			</div>
+		</div>
+		
     </body>
 </html>
