--- a/index_us.html
+++ b/index_us.html
@@ -94,7 +94,7 @@
 					
     <div id="Sponsors">
 		<div class="container">
-    		<div class="card row align-items-center">
+    		<div class="card_spons row align-items-center">
       			<p class="card-text">Sponsors</p>
     		</div>
   		</div>
