Main page done (sans Sponsors)

--- a/committee.html
+++ b/committee.html
@@ -34,7 +34,7 @@
                   <a class="nav-link" href="/index_us.html#Classes">Classes</a>
                   <li><a class="nav-link" href="committee.html">Committee</a></li>
                   <a class="nav-link" href="/index_us.html#Le_Journal">Le Journal</a>
-                  <a class="nav-link" href="/index_us.html#Sponsors">Sponsors</a>
+<!--                  <a class="nav-link" href="/index_us.html#Sponsors">Sponsors</a>-->
                   <a class="nav-link" href="/index_us.html#Newsletter">Newsletter</a>
 				  <a class="fa fa-facebook" href="http://www.facebook.com/uclfrancophonesociety" target="_blank" ></a>
 			      <a class="fa fa-instagram" href="https://www.instagram.com/uclufrancosoc/" target="_blank"></a>
@@ -43,7 +43,30 @@
           </div>
         </nav>
 
+		<div class="row align-items-center">
+			<div class="column">
+				<div class="card_right">
+					<div class="card-title text-center black_txt">President</div>
+					<p class="card-text"> Cras convallis ut turpis vitae facilisis. Morbi eu augue vel quam efficitur rhoncus vitae eget lectus. Cras augue ligula, aliquam ut enim ut, feugiat imp</p>
+				</div>
+			</div>
+			<div class="column image_right">
+				<img src="/media/napoleon.jpg" style:"float:right">
+			</div>
+		</div>
 
+		<div class="row align-items-center">
+			<div class="column image_left">
+				<img src="/media/bernard.jpeg" style:"float:left">
+			</div>
+			<div class="column">
+				<div class="card_left">
+					<div class="card-title text-center black_txt">Treasurer</div>
+					<p class="card-text"> Cras convallis ut turpis vitae facilisis. Morbi eu augue vel quam efficitur rhoncus vitae eget lectus. Cras augue ligula, aliquam ut enim ut, feugiat imp</p>
+				</div>
+			</div>
+			
+		</div>
 <!--
 		<div class="container1">
     		<div class="card1">
@@ -52,6 +75,7 @@
 			</div>
 -->
 		
+<!--
 		<div class="row align-items-right">
 			<div class="column-md-6">
 				<div class="card">
@@ -63,6 +87,7 @@
 				<img src="/media/napoleon.jpg" style="float: right">
 			</div>
 		</div>
+-->
 		
     </body>
 </html>
