--- a/index_us.html
+++ b/index_us.html
@@ -17,6 +17,9 @@
     <link href="css/stylesheet.css" rel="stylesheet">
 			
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	 
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
   </head>
   <body>
 			
