--- a/committee.html
+++ b/committee.html
@@ -43,51 +43,64 @@
           </div>
         </nav>
 
-		<div class="row align-items-center">
-			<div class="column">
-				<div class="card_right">
-					<div class="card-title text-center black_txt">President</div>
-					<p class="card-text"> Cras convallis ut turpis vitae facilisis. Morbi eu augue vel quam efficitur rhoncus vitae eget lectus. Cras augue ligula, aliquam ut enim ut, feugiat imp</p>
-				</div>
-			</div>
+		<div class="row">
 			<div class="column image_right">
-				<img src="/media/napoleon.jpg" style:"float:right">
+				<img src="/media/napoleon.jpg" align="right">
+			<div class="card_right">
+				<div class="card-title text-center black_txt">President</div>
+				<p class="card-text text-left">Hi! I’m Charlotte. I'm an English Literature student, and my fresher year at UCL would not have been the same without the FrancoSoc. That's why I'm committed to spreading the word about our amazing events and making our society grow even more - so come join us for another amazing year!</p>
+			</div>
 			</div>
 		</div>
 
-		<div class="row align-items-center">
+		<div class="row">
 			<div class="column image_left">
-				<img src="/media/bernard.jpeg" style:"float:left">
+				<img src="/media/bernard.jpeg" align="left">
+			<div class="card_left">
+				<div class="card-title text-center black_txt">Treasurer</div>
+				<p class="card-text text-right">Hi! I’m Charlotte, the FrancoSoc’s Communication Officer. I'm an English Literature student, and my fresher year at UCL would not have been the same without the FrancoSoc. That's why I'm committed to spreading the word about our amazing events and making our society grow even more - so come join us for another amazing year!</p>
 			</div>
-			<div class="column">
-				<div class="card_left">
-					<div class="card-title text-center black_txt">Treasurer</div>
-					<p class="card-text"> Cras convallis ut turpis vitae facilisis. Morbi eu augue vel quam efficitur rhoncus vitae eget lectus. Cras augue ligula, aliquam ut enim ut, feugiat imp</p>
-				</div>
-			</div>
-			
-		</div>
-<!--
-		<div class="container1">
-    		<div class="card1">
-			<h4 class="card-title">President</h4>
-			<p class="card-text-left">Cras convallis ut turpis vitae facilisis. Morbi eu augue vel quam efficitur rhoncus vitae eget lectus. Cras augue ligula, aliquam ut enim ut, feugiat imperdiet sem. Integer sed mi quis nisl eleifend interdum.<img src="/media/napoleon.jpg" alt="President" style="float: right" padding=15px></p>	
-			</div>
--->
-		
-<!--
-		<div class="row align-items-right">
-			<div class="column-md-6">
-				<div class="card">
-					<div class="card-title">President</div>
-					<p class="card-text">box-shadow: 20px 20px 20px grey;</p>
-				</div>
-			</div>
-			<div class="column-md-6">
-				<img src="/media/napoleon.jpg" style="float: right">
 			</div>
 		</div>
--->
 		
+		<div class="row">
+			<div class="column image_right">
+				<div class="profile-image" align="right">
+					<img src="/media/charlotte.jpg" width="300" height="300" align="right">
+					<span class="profile_hover"></span>
+				</div>
+			<div class="card_right">
+				<div class="card-title text-center black_txt">Communication Officer</div>
+				<p class="card-text text-left"> Hi! I’m Charlotte. I'm an English Literature student, and my fresher year at UCL would not have been the same without the FrancoSoc. That's why I'm committed to spreading the word about our amazing events and making our society grow even more - so come join us for another amazing year!</p>
+			</div>
+			</div>
+		</div>
+		
+		<div class="row">
+			<div class="column image_left">
+				<img src="/media/bernard.jpeg" align="left">
+			<div class="card_left">
+				<div class="card-title text-center black_txt">Social Officer</div>
+				<p class="card-text text-right">Hi! I’m Charlotte, the FrancoSoc’s Communication Officer. I'm an English Literature student, and my fresher year at UCL would not have been the same without the FrancoSoc. That's why I'm committed to spreading the word about our amazing events and making our society grow even more - so come join us for another amazing year!</p>
+			</div>
+			</div>
+		</div>
+		
+		<div class="row">
+			<div class="column image_right">
+				<img src="/media/napoleon.jpg" align="right" style:"float:right">
+			<div class="card_right">
+				<div class="card-title text-center black_txt">Education Officer</div>
+				<p class="card-text text-left"> Hi! I’m Charlotte. I'm an English Literature student, and my fresher year at UCL would not have been the same without the FrancoSoc. That's why I'm committed to spreading the word about our amazing events and making our society grow even more - so come join us for another amazing year!</p>
+			</div>
+			</div>
+		</div>
+		
+		 <!-- Footer -->
+      		<footer class="py-5 bg-black">
+				<div class="container">
+          			<p class="m-0 text-center text-small">Copyright &copy; UCL Francophone Society 2018</p>
+        		</div>
+			</footer>
     </body>
 </html>
