--- a/committee.html
+++ b/committee.html
@@ -45,29 +45,32 @@
 
 		<div class="row">
 			<div class="column image_right">
-				<img src="/media/napoleon.jpg" align="right">
+				<img src="/media/napoleon.jpg" align="right" style:"float:right">
 			<div class="card_right">
 				<div class="card-title text-center black_txt">President</div>
-				<p class="card-text text-left">Hi! I’m Charlotte. I'm an English Literature student, and my fresher year at UCL would not have been the same without the FrancoSoc. That's why I'm committed to spreading the word about our amazing events and making our society grow even more - so come join us for another amazing year!</p>
+				<p class="card-text text-left">Welcome everyone! I'm Maxime and I am a third year Astrophysics student. I have been a member of the Society throughout my time at UCL which helped me meet loads of fantastic people. I am very down to Earth but we’ll shoot for the stars and make this year memorable!</p>
 			</div>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="column image_left">
-				<img src="/media/bernard.jpeg" align="left">
+				<div class="profile-image_treas" align="left" style:"float:left">
+					<img src="/media/auguste.jpg" width="300" height="300" align="left">
+					<span class="profile_hover_treas"></span>
+				</div>
 			<div class="card_left">
 				<div class="card-title text-center black_txt">Treasurer</div>
-				<p class="card-text text-right">Hi! I’m Charlotte, the FrancoSoc’s Communication Officer. I'm an English Literature student, and my fresher year at UCL would not have been the same without the FrancoSoc. That's why I'm committed to spreading the word about our amazing events and making our society grow even more - so come join us for another amazing year!</p>
+				<p class="card-text text-center">I’m Auguste, Treasurer of the Francophone Society. I’m a second year Natural Sciences student, reading Physical Chemistry and Statistics, and I make sure that all of our amazing events are priced fairly while we grow to new (financial) heights as a society with the help of sponsors and such. Hope to see you at our Cheese and Wine tasting sessions, our movie screenings, and everything else!</p>
 			</div>
 			</div>
 		</div>
 		
 		<div class="row">
 			<div class="column image_right">
-				<div class="profile-image" align="right">
+				<div class="profile-image_com" align="right" style:"float:right">
 					<img src="/media/charlotte.jpg" width="300" height="300" align="right">
-					<span class="profile_hover"></span>
+					<span class="profile_hover_com"></span>
 				</div>
 			<div class="card_right">
 				<div class="card-title text-center black_txt">Communication Officer</div>
@@ -78,7 +81,7 @@
 		
 		<div class="row">
 			<div class="column image_left">
-				<img src="/media/bernard.jpeg" align="left">
+				<img src="/media/bernard.jpeg" align="left" style:"float:right">
 			<div class="card_left">
 				<div class="card-title text-center black_txt">Social Officer</div>
 				<p class="card-text text-right">Hi! I’m Charlotte, the FrancoSoc’s Communication Officer. I'm an English Literature student, and my fresher year at UCL would not have been the same without the FrancoSoc. That's why I'm committed to spreading the word about our amazing events and making our society grow even more - so come join us for another amazing year!</p>
