--- a/index_us.html
+++ b/index_us.html
@@ -55,7 +55,7 @@
 		<div class="row align-items-center overlay">
 			<div class="text-center white_txt">
 				<h1>A few words about us</h1>
-				<p>The UCL Francophone Society was created twelve years ago to celebrate and promote the rich history and culture of Francophone countries and it has now become one of the largest cultural societies on campus. Our community of over 250 members is made of a people from a variety of background but who all share a common passion for France!</p>
+				<p>Twelve years ago, the UCL Francophone Society was created, driven by this aim: to celebrate and promote the cultural and historical richness of Francophone countries. Today, we have grown to be one of the largest cultural societies on campus, with over 250 members. We are proud to be a group that shares our founders’ original vision: being a member of the Francophone Society is a chance to be a part of a diverse, supporting and fun community, as well as to share your passion for the French speaking world!</p>
 			</div>
 		</div>
       </div>
@@ -65,7 +65,7 @@
 			<div class="text-center white_txt">
 				<h1>Events</h1>
 				<tr>
-					<div class="row" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1000">
+					<div class="row" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="5000">
 						<div class="col-md-6 col-lg-4">
 							<div class="section-widget section2-widget-1">
 								<div class="section-widget-icon">
@@ -77,7 +77,7 @@
 									<div class="small-border"></div>
 								</div>
 								<div class="section-widget-content">
-									<p>We like our members to meet during informal events: eating and drinking at our Cheese and wine tastings, singing on karaoke nights and going out to the European Nights.</p>
+									<p>There’s no better way to bond than over a nice glass of Bordeaux, or at karaoke as you sing iconic French-music to the top of your lungs, or let loose on the dance floor at European Nights - well, the Francophone Society offers you all of these!</p>
 								</div>
 							</div>
 						</div>
@@ -91,7 +91,7 @@
 									<div class="small-border"></div>
 								</div>
 								<div class="section-widget-content">
-									<p>We invite speakers throughout the year to share their thoughts on today's burning topics and the role France plays on the international scene.</p>
+									<p>Members have the opportunity to attend talks throughout the year, as we invite speakers to discuss burning topics in the Francophone world and to share insightful thoughts on France’s international presence.</p>
 								</div>
 							</div>
 						</div>
@@ -106,7 +106,7 @@
 									<div class="small-border"></div>
 								</div>
 								<div class="section-widget-content">
-									<p>We organize events with other UCL, KCL, LSE, Imperial societies such as Football Tournaments, balls and much more!</p>
+									<p>We’re passionate about France and about UCL - and also about sharing all that fun! We organise joint events with other UCL, KCL, LSE, Imperial societies such as Football Tournaments, formal balls and much more!</p>
 								</div>
 							</div>
 						</div>
@@ -120,7 +120,7 @@
 		<div class="row align-items-center overlay">
 			<div class="text-center white_txt">
 				<h1>Classes</h1>
-				<p>We organise weekly classes taught by native speakers at four different levels* for students wanting to learn more about the French language and culture.</p>
+				<p>We organise <strong class="red_txt">free</strong> weekly classes taught by native speakers at four different levels* for students wanting to learn more about the French language and culture.</p>
 				<p>*Levels are aligned to the Common European Framework of Reference for Leanguages (CEFR).</p>
 				<form>
 					<button class="btn btn-outline-light" onclick="window.open('classes.html', '_blank')">Sign up for classes</button>
@@ -131,13 +131,15 @@
         
     <div id="Le_Journal" class="row align-items-center full_bg">
 		<div class="row align-items-center overlay">
-			<div class="text-center white_txt">
-          		<h1>Le Journal</h1>
-            	<p>This is the one and only Francophone Newspapper on campus. To read all about it and the opportunities to get involved please visit their website.</p>
-				<form>
-					<button class="btn btn-outline-light" onclick="window.open('https://lejournalucl.com/', '_blank')"> The Website</button>
-				</form>
-        	</div>
+			<div>
+				<div class="text-center white_txt">
+					<h1>Le Journal</h1>
+					<p>The one and only Francophone Newspaper on campus, welcomes new writers and editors every year. Visit their website if you would like to learn more about it and get involved!</p>
+					<form>
+						<button class="btn btn-outline-light" onclick="window.open('https://lejournalucl.com/', '_blank')"> The Website</button>
+					</form>
+				</div>
+			</div>
 		</div>
     </div>
 
