--- a/index_us.html
+++ b/index_us.html
@@ -154,8 +154,8 @@
 
     <!-- Add search bar for entering email adress -->
     <div id="Newsletter" class="column align-items-center full_bg_news">
-			<div class="">
-          		<p class="text-center black_txt">Don't forget to subscribe to our Newsletter!</p>
+			<div class=black_txt>
+          		<p class="text-center">Don't forget to subscribe to our Newsletter!</p>
 				<p class="text-center">(we won't spam you, promise)</p>
 				<p class="text-center"> Please get in touch if you have any questions or ideas. We look forward to hearing from you!</p>
 			</div>
