--- a/index_us.html
+++ b/index_us.html
@@ -66,7 +66,7 @@
 				<h1>Events</h1>
 				<tr>
 					<div class="row" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="5000">
-						<div class="col-md-6 col-lg-4">
+						<div class="col-sm-3 col-md-4 col-lg-4">
 							<div class="section-widget section2-widget-1">
 								<div class="section-widget-icon">
 									<img class="drinks" src="/media/drinks_2.png">
@@ -81,7 +81,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-6 col-lg-4">
+						<div class="col-sm-3 col-md-4 col-lg-4">
 							<div class="section-widget section2-widget-2">
 								<div class="section-widget-icon"><img class="podium" src="/media/podium.png">
 								</div>
@@ -96,7 +96,7 @@
 							</div>
 						</div>
 						
-						<div class="col-md-6 col-lg-4">
+						<div class="col-sm-3 col-md-4 col-lg-4">
 							<div class="section-widget section2-widget-3">
 								<div class="section-widget-icon"><img class="societies" src="/media/societies.png">
 								</div>
@@ -194,7 +194,7 @@
     
 </div>
       <!-- Footer -->
-      <footer class="py-5 bg-black">
+      <footer class="py-5 bg-black black_txt">
         <div class="container_foot">
           <p class="m-0 text-center text-small">Copyright &copy; UCL Francophone Society 2018</p>
         </div>
