--- a/index_us.html
+++ b/index_us.html
@@ -62,11 +62,11 @@
 
       <div id="Events" class="row align-items-center full_bg">
 		<div class="row align-items-center overlay">
-			<div class="text-center white_txt">
+			<div class="text-center white_txt_events">
 				<h1>Events</h1>
 				<tr>
-					<div class="row" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="5000">
-						<div class="col-sm-3 col-md-4 col-lg-4">
+					<div class="row" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1000">
+						<div class="col-sm-4 col-md-4 col-lg-4 ">
 							<div class="section-widget section2-widget-1">
 								<div class="section-widget-icon">
 									<img class="drinks" src="/media/drinks_2.png">
@@ -81,7 +81,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-3 col-md-4 col-lg-4">
+						<div class="col-sm-4 col-md-4 col-lg-4">
 							<div class="section-widget section2-widget-2">
 								<div class="section-widget-icon"><img class="podium" src="/media/podium.png">
 								</div>
@@ -96,7 +96,7 @@
 							</div>
 						</div>
 						
-						<div class="col-sm-3 col-md-4 col-lg-4">
+						<div class="col-sm-4 col-md-4 col-lg-4">
 							<div class="section-widget section2-widget-3">
 								<div class="section-widget-icon"><img class="societies" src="/media/societies.png">
 								</div>
