--- a/committee.html
+++ b/committee.html
@@ -96,7 +96,7 @@
 					<div class="our-team">
 						<div class="pic">
 							<img src="media/lesley.jpg" alt="">
-							<a href="#" class="read-more">read more</a>
+							<p href="#" class="read-more">read more</p>
 						</div>
 						<div class="team-content">
 							<h3 class="title">Lesley Farrah</h3>
@@ -108,7 +108,7 @@
 						<div class="our-team">
 							<div class="pic">
 								<img src="media/caroline.jpg" alt="">
-								<a href="#" class="read-more">read more</a>
+								<p href="#" class="read-more">read more</p>
 							</div>
 							<div class="team-content">
 								<h3 class="title">Caroline Bouat</h3>
@@ -120,7 +120,7 @@
 						<div class="our-team">
 							<div class="pic">
 								<img src="media/sofia.jpg" alt="">
-								<a href="#" class="read-more">read more</a>
+								<p href="#" class="read-more">read more</p>
 							</div>
 							<div class="team-content">
 								<h3 class="title">Sofia Bouguerra</h3>
