--- a/index_us.html
+++ b/index_us.html
@@ -161,17 +161,17 @@
 -->
 
     <!-- Add search bar for entering email adress -->
-    <div id="Newsletter" class="row align-items-center full_bg_news">
-		
+    <div id="Newsletter" class=" full_bg_news" style="padding-top: 50px;">
+		<div>
+			<h1 class="black_txt text-center">Don't forget to subscribe to our Newsletter</h1>
+			<h2 class="black_txt text-center">(No spam, just relevant information!)</h2>
+			<h3 class="black_txt text-center">Do not hesitate to contact us by email to share your ideas and suggestions</h3>
+		</div>
 						<!-- Begin MailChimp Signup Form -->
-			
+		
 			<div id="mc_embed_signup">
 			<form action="https://facebook.us14.list-manage.com/subscribe/post?u=71bc3c33ac4c2ad0594444ab5&amp;id=d08685af9d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 				<div id="mc_embed_signup_scroll">
-					<div class="mc_embed_signup">
-						<label for="mce-EMAIL">Don't forget to subscribe to our Newsletter</label>
-						<label for="mce-EMAIL">(No spam, just relevant information!)</label>
-					</div>
 					<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
 					<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 					<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_71bc3c33ac4c2ad0594444ab5_d08685af9d" tabindex="-1" value=""></div>
@@ -180,7 +180,7 @@
 			</form>
 			</div>
 			<!--End mc_embed_signup-->
-	</div> 
+	</div> 	
 </div>
 	  
       <!-- Footer -->
