--- a/events.html
+++ b/events.html
@@ -90,7 +90,7 @@
 			<!-- Ball-->
 			
 			<!-- Cheese and Wine-->
-			
+			<!-- Commit try-->
 			
 			<!-- Huis Clos Sartre-->
 			<div class="w3-display-container mySlides">
